#1160 upgrade to Java 21